--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,10 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    
+    <com.baidu.mapapi.map.MapView
+    	android:id="@+id/bmapView"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+    	android:clickable="true" />
+    
+    <ProgressBar android:indeterminate="true"
+            android:layout_width="50dp" android:layout_height="50dp"
+            android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
+            android:layout_gravity="center_vertical|center_horizontal"/>
 
 </RelativeLayout>
