--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,12 +9,13 @@
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
-        -->
+        -->        
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:panelBackground">@android:color/white</item>
     </style>
 
 </resources>
