add route planning, markers and such

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,5 +14,23 @@
             android:layout_width="50dp" android:layout_height="50dp"
             android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
             android:layout_gravity="center_vertical|center_horizontal"/>
+    
+    <Button
+	    android:id="@+id/btn_plan"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentTop="true"
+	    android:layout_marginRight="25dp"
+	    android:layout_marginTop="10dip"
+	    android:text="@string/action_plan" />
+    
+    <Button
+	    android:id="@+id/btn_navi"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+	    android:layout_marginBottom="10dip"
+	    android:text="@string/action_plan" />
 
 </RelativeLayout>
