--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,8 +29,10 @@
 	    android:id="@+id/btn_navi"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentBottom="true"
-	    android:layout_marginBottom="10dip"
-	    android:text="@string/action_plan" />
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentTop="true"
+	    android:layout_marginRight="25dp"
+	    android:layout_marginTop="10dip"
+	    android:text="@string/action_navi" />
 
 </RelativeLayout>
