--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,24 +15,38 @@
             android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
             android:layout_gravity="center_vertical|center_horizontal"/>
     
-    <Button
-	    android:id="@+id/btn_plan"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentRight="true"
-	    android:layout_alignParentTop="true"
-	    android:layout_marginRight="25dp"
-	    android:layout_marginTop="10dip"
-	    android:text="@string/action_plan" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        >
     
-    <Button
-	    android:id="@+id/btn_navi"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentRight="true"
-	    android:layout_alignParentTop="true"
-	    android:layout_marginRight="25dp"
-	    android:layout_marginTop="10dip"
-	    android:text="@string/action_navi" />
+	    <Button
+		    android:id="@+id/btn_plan"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="10dip"
+		    android:text="@string/action_plan" />
+		    <!-- android:layout_alignParentRight="true"
+		    android:layout_alignParentTop="true"
+		    android:layout_marginRight="10dp"
+		    android:layout_marginTop="10dip" -->
+	
+	    
+	    <Button
+		    android:id="@+id/btn_rst"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="10dip"	    
+		    android:text="@string/action_rst" />
+	    	<!-- android:layout_alignParentRight="true"
+		    android:layout_alignParentTop="true"
+		    android:layout_marginRight="10dp"
+		    android:layout_marginTop="10dip" -->
+    
+    </LinearLayout>
 
 </RelativeLayout>
