--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     	android:clickable="true" />
     
     <LinearLayout
+        android:id="@+id/loading"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="horizontal"        
@@ -19,9 +20,15 @@
         >
         
 	    <ProgressBar android:indeterminate="true"
-	            android:layout_width="50dp" android:layout_height="50dp"
+	            android:layout_width="50dp" android:layout_height="50dp"	            
 	            android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
 	            android:layout_gravity="center_vertical|center_horizontal"/>
+	    
+	    <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="@string/action_loading" />
+	    
 	    
     </LinearLayout>
     
@@ -30,7 +37,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:gravity="center_horizontal"
+        android:gravity="right"
         android:layout_alignParentTop="true"
         >
     
