--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,24 +11,27 @@
     	android:clickable="true" />
     
     <LinearLayout
-        android:id="@+id/loading"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"        
-        android:gravity="center_horizontal"
-        android:layout_alignParentTop="true"
-        >
+	        android:id="@+id/loading"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:orientation="horizontal"        
+	        android:gravity="center_horizontal"
+	        android:layout_alignParentTop="true"
+	        android:background="#55000000" >
         
-	    <ProgressBar android:indeterminate="true"
-	            android:layout_width="50dp" android:layout_height="50dp"	            
-	            android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
-	            android:layout_gravity="center_vertical|center_horizontal"/>
+	    <ProgressBar
+	        android:indeterminate="true"
+	        android:layout_width="50dp" android:layout_height="50dp"	            
+	        android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
+	        android:layout_gravity="center_vertical|center_horizontal"/>
 	    
 	    <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="@string/action_loading" />
-	    
+	        android:id="@+id/load_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_vertical|center_horizontal"
+	        android:text="@string/action_loading"
+		    android:textSize="20sp"/>
 	    
     </LinearLayout>
     
